storage/innobase/srv/srv0srv.cc
@@ -2780,7 +2780,7 @@ srv_purge_coordinator_suspend(
 
 		rw_lock_x_lock(&purge_sys->latch);
 
-		stop = (srv_shutdown_state == SRV_SHUTDOWN_NONE
+		stop = (srv_shutdown_state <= SRV_SHUTDOWN_INITIATED
 			&& purge_sys->state == PURGE_STATE_STOP);
 
 		if (!stop) {
@@ -2856,7 +2856,7 @@ DECLARE_THREAD(srv_purge_coordinator_thread)(
 		/* If there are no records to purge or the last
 		purge didn't purge any records then wait for activity. */
 
-		if (srv_shutdown_state == SRV_SHUTDOWN_NONE
+		if (srv_shutdown_state <= SRV_SHUTDOWN_INITIATED
 		    && srv_undo_sources
 		    && (purge_sys->state == PURGE_STATE_STOP
 			|| n_total_purged == 0)) {
